change repository name to calculagraph

--- a/example.html
+++ b/example.html
@@ -7,9 +7,9 @@
 <body>
 	
 </body>
-<script src="timer.js"></script>
+<script src="calculagraph.js"></script>
 <script>
-	var time = new Timer();
+	var time = new Calculagraph();
 
 	time.set(20);
 
